# picture-muvie

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Pipfile  README.md  docker-compose.dev.yml  docker-compose.yml  manage.py  package-lock.json  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflow/: cd.yml
.github/workflows/: ci.yml
backend/: .env.sample  Dockerfile  manage.py  pyproject.toml  requirements.txt
backend/picture_muvie/: api.py  docs.py  settings.py  urls.py  wsgi.py
backend/picture_muvie/output/: lyric.docx
backend/picture_muvie/templates/: masterdoc_tpl.docx  masterdoc_tpl1.docx  subdoc_lyric_tpl.docx  subdoc_lyric_tpl1.docx  title.docx
backend/picture_muvie/utils/: naver_search.py  optimize_lyrics.py  scraper.py  search_lyrics.py
backend/scripts/: start_dev.sh  start_prod.sh
frontend/: .env.sample  .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.js  vite.config.ts
frontend-vue/: .env.sample  .prettierrc.js  package-lock.json  tailwind.config.js
frontend-vue/src/: main.js
frontend-vue/src/api/: SetAxios.js
frontend/src/: App.tsx  App.vue  index.css  main.js  utils.js  utils.test.ts  utils.ts
frontend/src/api/: lyrics.ts  urls.js
frontend/src/api/modules/: lyrics.js
frontend/src/components/: ButtonDropDown.vue  DownloadButton.tsx  Footer.tsx  Header.tsx  Home.tsx  LyricsCard.tsx  MergeButton.tsx  TheFooter.vue  TheHeader.vue
frontend/src/icons/: IconChevron.tsx  IconMovie.tsx  IconMovie.vue  IconPlus.tsx  IconScissors.tsx  IconSpinner.tsx
frontend/src/views/: HomeView.vue
makedocx/: api.py  apps.py  forms.py  service.py  urls.py  views.py
makedocx/templates/: lyrics_body_form.docx  lyrics_header_form.docx
makedocx/templates/html/: lyrics.html
muvie/: pyproject.toml
nginx/: Dockerfile  dev.conf  prod.conf
openssl/certs/: nginx-selfsigned.crt
openssl/private/: nginx-selfsigned.key
picture_muvie/: api.py  asgi.py  docs.py  settings.py  urls.py  wsgi.py
picture_muvie/utils/: search_lyrics.py
