[project]
name = "picture-muvie"
version = "0.1.0"
description = ""
authors = [{ name = "Ridealist", email = "cjsn92@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "django>=4.1.6,<5",
    "lxml>=4.9.2",
    "docxtpl>=0.16.5",
    "django-extensions>=3.2.1",
    "django-ninja>=0.20.0",
    "requests>=2.28.2",
    "beautifulsoup4>=4.11.2",
    "django-environ>=0.9.0",
    "itunespy>=1.6.0",
    "django-cors-headers>=3.13.0",
    "gunicorn>=20.1.0",
    "psycopg2-binary>=2.9.5",
    "thefuzz>=0.19.0",
    "python-levenshtein>=0.20.9",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "ipython",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
