[project]
name = "picture-muvie"
version = "0.1.0"
description = ""
authors = [{ name = "Ridealist", email = "cjsn92@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "django>=5.2,<6",
    "lxml>=5.4",
    "docxtpl>=0.18",
    "django-extensions>=3.2",
    "django-ninja>=1.3",
    "requests>=2.32",
    "beautifulsoup4>=4.13",
    "django-environ>=0.12",
    "itunespy>=1.6",
    "django-cors-headers>=4.7",
    "gunicorn>=23.0",
    "psycopg2-binary>=2.9",
    "thefuzz>=0.22",
    "python-levenshtein>=0.26",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "ipython",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
